--- a/Index.html
+++ b/Index.html
@@ -8,10 +8,15 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    </head>
+  
+  <style>img {
+    text-align:center;
+    }
+  </style>
+  </head>
   
      <body>
-       <img src="logo.jpg" />
+       <img src="F2DB856D-FDCF-4102-88F4-0964187AEB68.jpeg" />
        <h1>Lleva tu bote!</h1>
     
     </body>
