--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
   </head>
   
      <body>
-       <img src="F2DB856D-FDCF-4102-88F4-0964187AEB68.jpeg" />
+       <img style="width:250px;" src="F2DB856D-FDCF-4102-88F4-0964187AEB68.jpeg" />
        <h1>Lleva tu bote!</h1>
     
     </body>
