--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
   
   <style>h1 {
     text-align:center;
+    font-size:16px;
     }
     img{
       padding-top:20%;
@@ -22,6 +23,7 @@
   
      <body>
        <img style="width:250px;" src="F2DB856D-FDCF-4102-88F4-0964187AEB68.jpeg" />
+       tel:999 218 3907 
        <h1>En Construccion / We are building.</h1>
        
  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
